# Android-opencv-edgedetection

./: .gitignore  README.md  index.html  main.ts  settings.gradle.kts  style.css
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/assessment/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
